--- a/rabbitgrassweed.ipynb
+++ b/rabbitgrassweed.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Herman Dávid Tamás\n",
-    "# Nyulak, fű és gyomok populációmodell <img src=\"rabbitgrassweed/pics/frabbit.png\"> <img src=\"rabbitgrassweed/pics/rabbit.png\">"
+    "# Nyulak, fű és gyomnövények populációmodell <img src=\"rabbitgrassweed/pics/frabbit.png\"> <img src=\"rabbitgrassweed/pics/rabbit.png\">"
    ]
   },
   {
@@ -22,11 +22,11 @@
    "id": "0d2fac66",
    "metadata": {},
    "source": [
-    "A \"Nyulak, fű és gyomok\" egy NetLogoban készült ágens alapú modell saját programozású mesa implementációja, illetve továbbfejlesztése.\n",
-    "Ez a modell egy növényevőfaj és annak kétféle táplálékának populációinak együttélését modellezi.\n",
-    "Az alapértelmezett modelltípus az eredeti modellt hivatott a lehető leghűbben implementálni, míg a \"Bővített modell\" típusban az egyedenek neme is van.\n",
+    "A \"Nyulak, fű és gyomnövények\" egy NetLogoban készült ágens alapú modellnek a saját programozású mesa implementációja, illetve továbbfejlesztése.\n",
+    "Ez a modell egy növényevő faj, és azoknak a kétfajta táplálékának együttélését modellezi.\n",
+    "Az alapértelmezett modelltípus az eredeti modellt hivatott a lehető leghűbben implementálni, míg a \"Bővített modell\" típusban az egyedeknek neme is van.\n",
     "\n",
-    "Egy ilyen modellt főként a mezőgazdaság és a természetvédelem területén lehet hasznosítani. A mezőgazdaságon belül az állattartás megtervezésénél lehet hasznos, míg a természetvédelemben a veszélyeztetett fajok érdekében történő beavatkozások hatásai szimulálhatók. Természetesen pontosan ez a modell egyikre sem alkalmas, mert primitív, azonban egy kiindulási alapként szolgálhat. A modell jelenlegi állapotában leginkább szemléltetésre használható."
+    "Egy ilyen modellt főként a mezőgazdaság és a természetvédelem területén lehet hasznosítani. A mezőgazdaságon belül az állattartás megtervezésénél lehet hasznos, míg a természetvédelemben a veszélyeztetett fajok érdekében történő beavatkozások hatásai szimulálhatók. Természetesen pontosan ez a modell egyikre sem alkalmas, mert kezdetleges, azonban egy kiindulási alapként szolgálhat. A modell jelenlegi állapotában leginkább szemléltetésre használható."
    ]
   },
   {
@@ -50,15 +50,15 @@
    "id": "85bd736c",
    "metadata": {},
    "source": [
-    "Mindkét modelltípusban van egy növényevőfaj, amelyet nyulakkal reprezentálunk.\n",
-    "Ezek a nyulak egy olyan területen élnek, ahol fű vagy gyomok nőhetnek valószínűségi alapon, amelyeknek van egy adott tápértéke.\n",
-    "Továbbá minden egyednek van valamennyi energiája (továbbiakban energiapont, röviden EP), amely minden lépésben (a modell állapotváltozása) eggyel csökken, de evés által a megevett táplálék típusától függő paraméternyivel megnő. Ha elfogy az energiájuk, akkor meghalnak. Ezek mellett képesek is szaporodni, amennyiben egy megadott szint feletti energiapontjuk van, azonban ekkor az energiájuk megfeleződik. A modell egy lépésében az állat ágensek egy szomszédos cellába lépnek át, ahol a szomszédos cellák a Moore-féle szomszédokat jelentik az ágens aktuális cellájának kivételével, tehát az állat ágensek nem maradhatnak egy helyben.\n",
+    "Mindkét modelltípusban van egy növényevő faj, amelyet nyulakkal reprezentálunk.\n",
+    "Ezek a nyulak egy olyan területen élnek, ahol fű vagy gyomnövények nőhetnek valószínűségi alapon, amelyeknek van egy adott tápértéke.\n",
+    "Továbbá minden egyednek van valamennyi energiája (továbbiakban energiapont, röviden EP), amely minden lépésben (a modell állapotváltozása) 1-gyel csökken, de evés által a megevett táplálék típusától függő paraméternyivel megnő. Ha elfogy az energiájuk, akkor meghalnak. Ezek mellett képesek is szaporodni, amennyiben egy megadott szint feletti energiapontjuk van, azonban ekkor az energiájuk megfeleződik. A modell egy lépésében az állat ágensek egy szomszédos cellába lépnek át, ahol a szomszédos cellák a Moore-féle szomszédokat jelentik az ágens aktuális cellájának kivételével, tehát az állat ágensek nem maradhatnak egyhelyben.\n",
     "\n",
     "Az energiapontról annyit érdemes tudni, hogy a program eggyel kevesebb energiaponttal dolgozik, mint ami egy állaton látható a vizualizációs alkalmazásban, ha rájuk tesszük a kurzort. Ez azt hivatott korrigálni, hogy a szaporodási küszöb és a kezdeti maximális EP paraméterek szigorú egyenlőtlenséget használnak. Ezen paraméterek csúszkái a kijelzett értékek szerint állíthatók. Tehát a felhasználónak az alkalmazás legalább 1 EP-t jelez. Az állatokra rátéve a kurzort látható egy \"Layer: 1\" érték is, ami réteget jelent és nem elhagyható. A fű ágenseknél ez a réteg 0 és ennek köszönhető, hogy csak az állatokon jelenik meg ez a jelzés.\n",
     "\n",
-    "Az eredeti modellben a fű és a gyomok mint \"patchek\" voltak a cellákba helyezve, míg ebben az implementációban ágensként.\n",
-    "A füvet és a gyomokat egy közös fű ágens kezeli, amennyiből annyi van, ahány cella. A fű ágenseknek két állapota van, kinőtt és lelegelt.\n",
-    "Fontos tulajdonság, hogy a cellákban nagyobb valószínűséggel nő ki fű, mint gyomok. Ennek az az oka, hogy először az dől el, hogy gyomok nőhetnek-e ki és utána, hogy fű, azonban ez felülírja gyomokat, amennyiben bekövetkezik. Tehát, ha fű kinőhet a megadott valószínűség szerint, akkor fű nő ki függetlenül attól, hogy gyomok kinőhetnek-e vagy sem. Ez a viselkedés az eredeti modellből származik.\n",
+    "Az eredeti modellben a fű és a gyomnövények mint \"patchek\" voltak a cellákba helyezve, míg ebben az implementációban ágensként.\n",
+    "A füvet és a gyomnövényeket egy közös fű ágens kezeli, amennyiből annyi van, ahány cella. A fű ágenseknek két állapota van, kinőtt és lelegelt.\n",
+    "Fontos tulajdonság, hogy a cellákban nagyobb valószínűséggel nő ki fű, mint gyomnövények. Ennek az az oka, hogy először az dől el, hogy gyomnövények nőhetnek-e ki és utána, hogy fű. Azonban ez felülírja gyomnövényeket, amennyiben bekövetkezik. Tehát, ha fű kinőhet a megadott valószínűség szerint, akkor fű nő ki függetlenül attól, hogy gyomnövények kinőhetnek-e vagy sem. Ez a viselkedés az eredeti modellből származik.\n",
     "\n",
     "A modell továbbfejlesztése céljából lehetőség van egy ragadozófaj hozzáadásához, amelyet rókákkal reprezentálunk. A rókák alapvetően ugyanúgy viselkednek, mint a nyulak, de természetesen a rókák a nyulakat eszik meg. Emellett képesek aktívan is vadászni, vagyis csak olyan szomszédos cellába lépni, amelyben van nyúl.\n",
     "\n",
@@ -69,13 +69,13 @@
     "<br><i>30 x 30</i></li>\n",
     "<li>Tórusz: Ha egy állat ágens a rács szélén van, akkor átléphetnek-e a szemben lévő szélre vagy sem.\n",
     "<br><i>Igaz</i></li>\n",
-    "<li>Modelltípus, amely lehet az eredeti modell, a \"Nyulak, fű és gyomok modell\", vagy a \"Bővített modell\", amiben az állatoknak van neme.\n",
-    "<br><i>Nyulak, fű és gyomok modell</i></li>\n",
+    "<li>Modelltípus, amely lehet az eredeti modell, a \"Nyulak, fű és gyomnövények modell\", vagy a \"Bővített modell\", amiben az állatoknak van neme.\n",
+    "<br><i>Nyulak, fű és gyomnövények modell</i></li>\n",
     "<li>A nyulak kezdeti száma.\n",
     "<br><i>150</i></li>\n",
     "<li>A rókák kezdeti száma.\n",
     "<br><i>0</i></li>\n",
-    "<li>A nyulak fűből és gyomokból nyert energiapont mennyisége.\n",
+    "<li>A nyulak fűből és gyomnövényekből nyert energiapont mennyisége.\n",
     "<br><i>5 és 0</i></li>\n",
     "<li>A rókák nyulakból nyert energiapont mennyisége.\n",
     "<br><i>5</i></li>\n",
@@ -83,9 +83,9 @@
     "<br><i>10 és 10</i></li>\n",
     "<li>A nyulak és rókák szaporodási küszöbe. Legalább ennyi energiapontra van szüksége egy egyednek a szaporodáshoz.\n",
     "<br><i>15 és 15</i></li>\n",
-    "<li>A fű és a gyomok kinövési valószínűsége százalékban. Az eredeti modellben ezrelékben, de a csúszkák ilyen sűrű beosztású intervallumon pontatlanok.\n",
+    "<li>A fű és a gyomnövények kinövési valószínűsége százalékban. Az eredeti modellben ezrelékben, de a csúszkák ilyen sűrű beosztású intervallumon pontatlanok.\n",
     "<br><i>6%, eredetileg 15 ezrelék, vagyis 1,5%</i></li>\n",
-    "<li>A nyulak csordába igyekezzenek-e szerveződni.\n",
+    "<li>A nyulak csapatba igyekezzenek-e szerveződni.\n",
     "<br><i>Hamis</i></li>\n",
     "<li>A rókák aktívan vadásszanak-e.\n",
     "<br><i>Igaz</i></li>\n",
@@ -138,7 +138,7 @@
     "\n",
     "<img src=\"rabbitgrassweed/pics/graph_anomaly.png\" width=300>\n",
     "\n",
-    "A modell akkor is stabil marad, ha a modelltípust átállítjuk, azonban rókákkal már ez nem teljesül, mert a rókák kihalnak. Mindkét modelltípusban megmarad a stabilitás, ha a gyomok szaporodási valószínűségét 12% állítjuk, de a gyomok tápértéke továbbra is 0.\n",
+    "A modell akkor is stabil marad, ha a modelltípust átállítjuk, azonban rókákkal már ez nem teljesül, mert a rókák kihalnak. Mindkét modelltípusban megmarad a stabilitás, ha a gyomnövények szaporodási valószínűségét 12% állítjuk, de a gyomnövények tápértéke továbbra is 0.\n",
     "\n",
     "<img src=\"rabbitgrassweed/pics/extended_model_rabbits.png\" width=500><br>\n",
     "\n",
@@ -249,7 +249,7 @@
     "\n",
     "\n",
     "model = RabbitGrassWeedModel(width=30, height=30, torus=True,\n",
-    "                             model_type=\"Nyulak, fű és gyomok modell\",\n",
+    "                             model_type=\"Nyulak, fű és gyomnövények modell\",\n",
     "                             n_rabbit=150, n_fox=50,\n",
     "                             rabbit_ep_gain_grass=5, rabbit_ep_gain_weed=0, fox_ep_gain=5,\n",
     "                             rabbit_max_init_ep=10, fox_max_init_ep=10,\n",
