--- a/rabbitgrassweed.ipynb
+++ b/rabbitgrassweed.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "source": [
     "A \"Nyulak, fű és gyomnövények\" egy NetLogoban készült ágens alapú modellnek a saját programozású mesa implementációja, illetve továbbfejlesztése.\n",
-    "Ez a modell egy növényevő faj, és azoknak a kétfajta táplálékának együttélését modellezi.\n",
+    "Ez a modell egy növényevő faj, és kétfajta táplálékának együttélését modellezi.\n",
     "Az alapértelmezett modelltípus az eredeti modellt hivatott a lehető leghűbben implementálni, míg a \"Bővített modell\" típusban az egyedeknek neme is van.\n",
     "\n",
     "Egy ilyen modellt főként a mezőgazdaság és a természetvédelem területén lehet hasznosítani. A mezőgazdaságon belül az állattartás megtervezésénél lehet hasznos, míg a természetvédelemben a veszélyeztetett fajok érdekében történő beavatkozások hatásai szimulálhatók. Természetesen pontosan ez a modell egyikre sem alkalmas, mert kezdetleges, azonban egy kiindulási alapként szolgálhat. A modell jelenlegi állapotában leginkább szemléltetésre használható.\n",
@@ -58,13 +58,13 @@
     "Ezek a nyulak egy olyan területen élnek, ahol fű vagy gyomnövények nőhetnek valószínűségi alapon, amelyeknek van egy adott tápértéke.\n",
     "Továbbá minden egyednek van valamennyi energiája (továbbiakban energiapont, röviden EP), amely minden lépésben (a modell állapotváltozása) 1-gyel csökken, de evés által a megevett táplálék típusától függő paraméternyivel megnő. Ha elfogy az energiájuk, akkor meghalnak. Ezek mellett képesek is szaporodni, amennyiben egy megadott szint feletti energiapontjuk van, azonban ekkor az energiájuk megfeleződik. A modell egy lépésében az állat ágensek egy szomszédos cellába lépnek át, ahol a szomszédos cellák a Moore-féle szomszédokat jelentik az ágens aktuális cellájának kivételével, tehát az állat ágensek nem maradhatnak egyhelyben.\n",
     "\n",
-    "Az energiapontról annyit érdemes tudni, hogy a program eggyel kevesebb energiaponttal dolgozik, mint ami egy állaton látható a vizualizációs alkalmazásban, ha rájuk tesszük a kurzort. Ez azt hivatott korrigálni, hogy a szaporodási küszöb és a kezdeti maximális EP paraméterek szigorú egyenlőtlenséget használnak. Ezen paraméterek csúszkái a kijelzett értékek szerint állíthatók. Tehát a felhasználónak az alkalmazás legalább 1 EP-t jelez. Az állatokra rátéve a kurzort látható egy \"Layer: 1\" érték is, ami réteget jelent és nem elhagyható. A fű ágenseknél ez a réteg 0 és ennek köszönhető, hogy csak az állatokon jelenik meg ez a jelzés.\n",
+    "Az energiapontról annyit érdemes tudni, hogy a program eggyel kevesebb energiaponttal dolgozik, mint ami egy állaton látható a vizualizációs alkalmazásban, ha rátesszük a kurzort. Ez azt hivatott korrigálni, hogy a szaporodási küszöb és a kezdeti maximális EP paraméterek szigorú egyenlőtlenséget használnak. Ezen paraméterek csúszkái a kijelzett értékek szerint állíthatók. Tehát a felhasználónak az alkalmazás legalább 1 EP-t jelez. Az állatokra rátéve a kurzort látható egy \"Layer: 1\" érték is, ami réteget jelent és nem elhagyható. A fű ágenseknél ez a réteg 0 és ennek köszönhető, hogy csak az állatokon jelenik meg ez a jelzés.\n",
     "\n",
     "Az eredeti modellben a fű és a gyomnövények mint \"patchek\" voltak a cellákba helyezve, míg ebben az implementációban ágensként.\n",
     "A füvet és a gyomnövényeket egy közös fű ágens kezeli, amennyiből annyi van, ahány cella. A fű ágenseknek két állapota van, kinőtt és lelegelt.\n",
     "Fontos tulajdonság, hogy a cellákban nagyobb valószínűséggel nő ki fű, mint gyomnövények. Ennek az az oka, hogy először az dől el, hogy gyomnövények nőhetnek-e ki és utána, hogy fű. Azonban ez felülírja gyomnövényeket, amennyiben bekövetkezik. Tehát, ha fű kinőhet a megadott valószínűség szerint, akkor fű nő ki függetlenül attól, hogy gyomnövények kinőhetnek-e vagy sem. Ez a viselkedés az eredeti modellből származik.\n",
     "\n",
-    "A modell továbbfejlesztése céljából lehetőség van egy ragadozófaj hozzáadásához, amelyet rókákkal reprezentálunk. A rókák alapvetően ugyanúgy viselkednek, mint a nyulak, de természetesen a rókák a nyulakat eszik meg. Emellett képesek aktívan is vadászni, vagyis csak olyan szomszédos cellába lépni, amelyben van nyúl.\n",
+    "A modell bővítése céljából lehetőség van egy ragadozófaj hozzáadásához, amelyet rókákkal reprezentálunk. A rókák alapvetően ugyanúgy viselkednek, mint a nyulak, de természetesen a rókák a nyulakat eszik meg. Emellett képesek aktívan is vadászni, vagyis csak olyan szomszédos cellába lépni, amelyben van nyúl.\n",
     "\n",
     "A paraméterek sorrendben és alapértelmezett értékük:\n",
     "\n",
