--- a/rabbitgrassweed.ipynb
+++ b/rabbitgrassweed.ipynb
@@ -18,14 +18,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bda32dc9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "0d2fac66",
    "metadata": {},
@@ -156,7 +148,7 @@
     "\n",
     "<img src=\"rabbitgrassweed/pics/extended_model_weeds.png\" width=500>\n",
     "\n",
-    "Ha a kezdeti rókák száma 50 és az aktív vadászat ki van kapcsolva, akkor a rókák csak úgy élhetnek túl, ha valamilyen paramétert átállítunk. Több teszt futtatása után a nyulak tápértékének növelése bizonyult kifizetődőnek. A minimális tápérték amellett stabil a modell az 12 EP.\n",
+    "Ha a rókák kezdeti száma 50 és az aktív vadászat ki van kapcsolva, akkor a rókák csak úgy élhetnek túl, ha valamilyen paramétert átállítunk. Több teszt futtatása után a nyulak tápértékének növelése bizonyult kifizetődőnek. A minimális tápérték amellett stabil a modell az 12 EP.\n",
     "\n",
     "<img src=\"rabbitgrassweed/pics/default_model_foxes.png\" width=500>\n",
     "\n",
